--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -915,4 +915,4 @@ session.FIXED_LIFETIME=Fixed time
 session.INACTIVE_COUNT_LIFETIME=Inactive time
 session.settings.time.invalid=Session time invalid
 session.time.from{0}To{1}Minutes=From {0} to {1} minutes
-session.settings.success.relogin=Update success, please re-login for changes take effect
+session.settings.success=Session update success
