--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1001,9 +1001,9 @@ session.settings=Настройки сессии
 session.time.minutes=Время сессии, минут
 button.update=Обновить
 session.AccountingOfsessionTime=Рассчет времени сессии
-session.settings.invalid=Неправильные навстройки сессии
+session.settings.invalid=Неправильные настройки сессии
 session.FIXED_LIFETIME=Фиксированное время
 session.INACTIVE_COUNT_LIFETIME=Время без активности
 session.settings.time.invalid=Время сессии некорректное
 session.time.from{0}To{1}Minutes=От {0} до {1} минут
-session.settings.success.relogin=Параметры обновлены, войдите в аккаунт заново чтобы изменения вступили в силу
+session.settings.success=Параметры сессии обновлены
