--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -985,3 +985,13 @@ withdrawal.phrases.decline.2 = Some reason 2
 withdrawal.phrases.decline.3 = Some reason 3
 admin.reset=Reset
 adminAuthority.MANAGE_BTC_CORE_WALLET=Bitcoin Core wallet management
+session.settings=Session settings
+session.time.minutes=Session time, minutes
+button.update=Update
+session.AccountingOfsessionTime=Accounting of session time
+session.settings.invalid=Session settings is invalid
+session.FIXED_LIFETIME=Fixed time
+session.INACTIVE_COUNT_LIFETIME=Inactive time
+session.settings.time.invalid=Session time invalid
+session.time.from{0}To{1}Minutes=From {0} to {1} minutes
+session.settings.success=Session update success
