--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -455,7 +455,6 @@ order.rate=Курс за единицу
 order.total=Всего
 order.commission=Комиссия
 order.amountwithcommission=Итого с комиссией
-order.minrate=Обменный курс должен быть больше 0
 orders.exrate=Курс
 orders.date=Дата
 transaction.order=Ордер ID
@@ -1008,5 +1007,7 @@ session.INACTIVE_COUNT_LIFETIME=Время без активности
 session.settings.time.invalid=Время сессии некорректное
 session.time.from{0}To{1}Minutes=От {0} до {1} минут
 session.settings.success=Параметры сессии обновлены
+
+order.minrate=Обменный курс должен быть больше {0}
 btcWallet.actualFee=Актуальная комиссия, BTC/kB
 btcWallet.changeFee=Изменить
