--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -784,7 +784,7 @@ admin.blockAllInput=Block all input
 admin.blockAllOutput=Block all output
 admin.unblockAllInput=Unblock all input
 admin.unblockAllOutput=Unblock all output
-transactionsourcetype.USER=USER
+transactionsourcetype.USER_TRANSFER=USER
 operationtype.USER_TRANSFER=USER TRANSFER
 mywallets.transfer=Transfer
 wallets.transferTitle=Transfer of costs to other user
