--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1009,5 +1009,7 @@ session.time.from{0}To{1}Minutes=От {0} до {1} минут
 session.settings.success=Параметры сессии обновлены
 
 order.minrate=Обменный курс должен быть больше {0}
+order.maxrate=Обменный курс должен быть меньше {0}
+order.zerorate=Обменный курс должен быть больше 0
 btcWallet.actualFee=Актуальная комиссия, BTC/kB
 btcWallet.changeFee=Изменить
