add tx fee edit

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -865,7 +865,7 @@ btcWallet.history.category=Category
 btcWallet.history.amount=Amount
 btcWallet.history.fee=Fee amount
 btcWallet.amount=Amount, BTC
-btcWallet.fee=Fee, BTC/kB
+btcWallet.fee=Recommended fee, BTC/kB
 btcWallet.history.confirmations=Confirmations
 btcWallet.history.time=Time
 btcWallet.balance=Balance:
@@ -917,3 +917,5 @@ session.INACTIVE_COUNT_LIFETIME=Inactive time
 session.settings.time.invalid=Session time invalid
 session.time.from{0}To{1}Minutes=From {0} to {1} minutes
 session.settings.success=Session update success
+btcWallet.actualFee=Actual fee, BTC/kB
+btcWallet.changeFee=Update
