--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -956,7 +956,7 @@ btcWallet.history.category=Категория
 btcWallet.history.amount=Сумма
 btcWallet.history.fee=Сумма комиссии
 btcWallet.amount=Сумма, BTC
-btcWallet.fee=Комиссия, BTC/kB
+btcWallet.fee=Рекомендуемая комиссия, BTC/kB
 btcWallet.history.confirmations=Подтверждения
 btcWallet.history.time=Время
 btcWallet.balance=Баланс:
@@ -1008,3 +1008,5 @@ session.INACTIVE_COUNT_LIFETIME=Время без активности
 session.settings.time.invalid=Время сессии некорректное
 session.time.from{0}To{1}Minutes=От {0} до {1} минут
 session.settings.success=Параметры сессии обновлены
+btcWallet.actualFee=Актуальная комиссия, BTC/kB
+btcWallet.changeFee=Изменить
