add editing order rate limits in admin

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -996,5 +996,9 @@ session.INACTIVE_COUNT_LIFETIME=Inactive time
 session.settings.time.invalid=Session time invalid
 session.time.from{0}To{1}Minutes=From {0} to {1} minutes
 session.settings.success=Session update success
+admin.currencyLimits.minRate=Minimal rate
+admin.currencyLimits.maxRate=Maximal rate
+admin.currencyLimits.menu.currencies=Currency refill/withdraw
+admin.currencyLimits.menu.currencyPairs=Order prices
 btcWallet.actualFee=Actual fee, BTC/kB
 btcWallet.changeFee=Update
