--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1011,5 +1011,8 @@ session.settings.success=Параметры сессии обновлены
 order.minrate=Обменный курс должен быть больше {0}
 order.maxrate=Обменный курс должен быть меньше {0}
 order.zerorate=Обменный курс должен быть больше 0
-btcWallet.actualFee=Актуальная комиссия, BTC/kB
-btcWallet.changeFee=Изменить
+admin.currencyLimits.minRate=Минимальная цена
+admin.currencyLimits.maxRate=Максимальная цена
+admin.currencyLimits.menu.currencies=Ввод/вывод валют
+admin.currencyLimits.menu.currencyPairs=Цены ордеров
+
