--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -423,7 +423,6 @@ order.rate=المسار بالوحدة
 order.total=الجملي
 order.commission=العمولة
 order.amountwithcommission=العمولة الجملية
-order.minrate=المسار الجملي يجب ان يفوق 0
 orders.exrate=المسار
 orders.date=التاريخ
 transaction.order=الطلب ID
@@ -1214,3 +1213,8 @@ admin.currencyLimits.menu.currencies=Currency refill/withdraw
 admin.currencyLimits.menu.currencyPairs=Order prices
 btcWallet.actualFee=Actual fee, BTC/kB
 btcWallet.changeFee=Update
+
+order.minrate=يجب أن يكون سعر الصرف أكبر من {0}
+order.maxrate=يجب أن يكون سعر الصرف أقل من {0}
+order.zerorate=يجب أن يكون سعر الصرف أكبر من 0
+
