--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -350,7 +350,6 @@ dashboard.mobileApp = Mobile App
 chart.months = 月
 merchants.WithdrawRequestAccept = 该应用程序已成功接受
 merchants.outputTitle = 提款
-order.minrate = 汇率必须大于0
 admin.ref = 链接
 admin.listOfAdmins = 管理员列表
 login.notFound = 错误的密码或用户名！
@@ -1002,3 +1001,7 @@ admin.currencyLimits.menu.currencies=Currency refill/withdraw
 admin.currencyLimits.menu.currencyPairs=Order prices
 btcWallet.actualFee=Actual fee, BTC/kB
 btcWallet.changeFee=Update
+
+order.minrate=汇率必须大于{0}
+order.maxrate=汇率必须小于{0}
+order.zerorate=汇率必须大于0
