--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -390,7 +390,6 @@ order.rate=Exchange rate per unit
 order.total=Total
 order.commission=Commission
 order.amountwithcommission=Total with the commission
-order.minrate=The exchange rate must be greater than 0
 orders.exrate=Rate
 orders.date=Deal date
 transaction.order=Order ID
@@ -923,3 +922,7 @@ admin.currencyLimits.menu.currencies=Currency refill/withdraw
 admin.currencyLimits.menu.currencyPairs=Order prices
 btcWallet.actualFee=Actual fee, BTC/kB
 btcWallet.changeFee=Update
+
+order.minrate=The exchange rate must be greater than {0}
+order.maxrate=The exchange rate must be less than {0}
+order.zerorate=The exchange rate must be greater than 0
