--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1208,3 +1208,4 @@ session.INACTIVE_COUNT_LIFETIME=Inactive time
 session.settings.time.invalid=Session time invalid
 session.time.from{0}To{1}Minutes=From {0} to {1} minutes
 session.settings.success=Session update success
+admin.referrals=Referrals
