--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1024,3 +1024,4 @@ session.INACTIVE_COUNT_LIFETIME=Inactive time
 session.settings.time.invalid=Session time invalid
 session.time.from{0}To{1}Minutes=From {0} to {1} minutes
 session.settings.success=Session update success
+admin.referrals=Referrals
