--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1008,3 +1008,4 @@ session.INACTIVE_COUNT_LIFETIME=Время без активности
 session.settings.time.invalid=Время сессии некорректное
 session.time.from{0}To{1}Minutes=От {0} до {1} минут
 session.settings.success=Параметры сессии обновлены
+admin.referrals=Рефералы
