--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -999,3 +999,4 @@ session.settings.success=Session update success
 admin.referrals=Referrals
 btcWallet.actualFee=Actual fee, BTC/kB
 btcWallet.changeFee=Update
+admin.referralAccruals=Referral accruals
