--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -920,3 +920,4 @@ session.settings.success=Session update success
 admin.referrals=Referrals
 btcWallet.actualFee=Actual fee, BTC/kB
 btcWallet.changeFee=Update
+admin.referralAccruals=Referral accruals
