--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1027,3 +1027,4 @@ session.settings.success=Session update success
 admin.referrals=Referrals
 btcWallet.actualFee=Actual fee, BTC/kB
 btcWallet.changeFee=Update
+admin.referralAccruals=Referral accruals
