--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1011,3 +1011,4 @@ session.settings.success=Параметры сессии обновлены
 admin.referrals=Рефералы
 btcWallet.actualFee=Актуальная комиссия, BTC/kB
 btcWallet.changeFee=Изменить
+admin.referralAccruals=Реферальные начисления
