--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -718,3 +718,4 @@ session.settings.time.invalid=Session time invalid
 session.time.from{0}To{1}Minutes=From {0} to {1} minutes
 session.settings.success=Session update success
 admin.referrals=Referrals
+admin.referralAccruals=Referral accruals
