--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -937,8 +937,8 @@ merchant.withdrawAutoDelayMinute=мин.
 merchant.withdrawAutoDelayHour=час.
 merchant.withdrawAutoThreshold=Подтверждать для сумм больше
 merchant.withdrawAutoThresholdExt=Требуется подтверждение при сумме более
-merchants.withdrawNotification.WAITING_MANUAL_POSTING=Запрос на вывод #{0} через  {1} принята и будет проведен
-merchants.withdrawNotification.WAITING_AUTO_POSTING=Запрос на вывод #{0} через {1} принята и будет проведен
+merchants.withdrawNotification.WAITING_MANUAL_POSTING=Запрос на вывод #{0} через  {1} принят и будет проведен
+merchants.withdrawNotification.WAITING_AUTO_POSTING=Запрос на вывод #{0} через {1} принят и будет проведен
 merchants.withdrawNotification.WAITING_CONFIRMATION=Запрос на вывод #{0} через {1} ожидает утверждения и затем будет проведен через {2}
 merchants.withdrawNotification.WAITING_CONFIRMED_POSTING=Запрос на вывод #{0} через {1} утвержден и будет проведен через {2}
 merchants.withdrawNotification.POSTED_MANUAL=Запрос на вывод #{0} проведен
