--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1012,3 +1012,4 @@ admin.referrals=Рефералы
 btcWallet.actualFee=Актуальная комиссия, BTC/kB
 btcWallet.changeFee=Изменить
 admin.referralAccruals=Реферальные начисления
+admin.admin.ref.showRefsNull=Show 0 amount
