--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -921,3 +921,4 @@ admin.referrals=Referrals
 btcWallet.actualFee=Actual fee, BTC/kB
 btcWallet.changeFee=Update
 admin.referralAccruals=Referral accruals
+admin.admin.ref.showRefsNull=Show 0 amount
