add currency request daily limit

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -875,6 +875,7 @@ admin.currencyLimits.modalTitle=Edit limits
 admin.currencyLimits.minLimit=Minimal sum
 admin.currencyLimits.name=Currency
 admin.currencyLimits.description=Description
+admin.currencyLimits.maxDailyRequest=Max daily requests count
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
 news.newsTitle=Title
@@ -930,8 +931,8 @@ admin.promptDeleteUserComment = Are you sure that you want to delete this commen
 wallets.downloadOrders=Download orders
 wallets.downloadOrdersByCurrencyPairs=Download orders by currency pairs
 admin.accessRights=Access rights
-merchants.InputRequestsLimit=Your daily input limit  for this merchant has been exceeded. Please try again tomorrow.
-
+merchants.InputRequestsLimit=Your daily input limit  for this currency has been exceeded. Please try again tomorrow.
+merchants.OutputRequestsLimit=Your daily output limit for this currency has been exceeded. Please try again tomorrow.
 adminAuthority.PROCESS_WITHDRAW=Accept or decline withdraw requests
 adminAuthority.PROCESS_INVOICE=Accept refill requests
 adminAuthority.DELETE_ORDER=Delete orders
