--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -667,6 +667,7 @@ admin.currencyLimits.modalTitle=Edit limits
 admin.currencyLimits.minLimit=Minimal sum
 admin.currencyLimits.name=Currency
 admin.currencyLimits.description=Description
+admin.currencyLimits.maxDailyRequest=Max daily requests count
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
 news.newsTitle=Title
@@ -736,7 +737,8 @@ operationtype.MANUAL=Manual input
 transactionsourcetype.MANUAL=MANUAL
 orders.partialAccept.yourOrder=Your order #{0} was accepted partially - {1} of {2} {3}
 orders.partialAccept.title=Order accepted partially
-merchants.InputRequestsLimit=Your daily input limit  for this merchant has been exceeded. Please try again tomorrow.
+merchants.InputRequestsLimit=Your daily input limit  for this currency has been exceeded. Please try again tomorrow.
+merchants.OutputRequestsLimit=Your daily output limit for this currency has been exceeded. Please try again tomorrow.
 accessDenied.title=Access denied
 accessDenied.message=You do not have permission to access this page!
 accessDenied.signInDifferentUser=Sign in as different user
