--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -210,7 +210,8 @@ merchants.sumToPay=Sum to pay
 merchants.withdraw=Withdraw
 merchants.pendingEnrollment=The transfer of money will will occur within next 48 hours
 merchants.waiting=Waiting
-merchants.InputRequestsLimit=Your daily input limit  for this merchant has been exceeded. Please try again tomorrow.
+merchants.InputRequestsLimit=Your daily input limit  for this currency has been exceeded. Please try again tomorrow.
+merchants.OutputRequestsLimit=Your daily output limit for this currency has been exceeded. Please try again tomorrow.
 myorders.amountbuy=commission free amount
 myorders.amountsell=sum
 myorders.amountwithcommission=amount including commission
@@ -611,6 +612,7 @@ admin.currencyLimits.modalTitle=Edit limits
 admin.currencyLimits.minLimit=Minimal sum
 admin.currencyLimits.name=Currency
 admin.currencyLimits.description=Description
+admin.currencyLimits.maxDailyRequest=Max daily requests count
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
 news.newsTitle=Title
