--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -694,6 +694,7 @@ admin.currencyLimits.modalTitle=Edit limits
 admin.currencyLimits.minLimit=Minimal sum
 admin.currencyLimits.name=Currency
 admin.currencyLimits.description=Description
+admin.currencyLimits.maxDailyRequest=Max daily requests count
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
 news.newsTitle=Title
@@ -761,8 +762,8 @@ adminAuthority.EDIT_USER=Edit user
 
 operationtype.MANUAL=Manual input
 transactionsourcetype.MANUAL=MANUAL
-merchants.InputRequestsLimit=Your daily input limit  for this merchant has been exceeded. Please try again tomorrow.
-
+merchants.InputRequestsLimit=Your daily input limit  for this currency has been exceeded. Please try again tomorrow.
+merchants.OutputRequestsLimit=Your daily output limit for this currency has been exceeded. Please try again tomorrow.
 orders.partialAccept.yourOrder=Your order #{0} was accepted partially - {1} of {2} {3}
 orders.partialAccept.title=Order accepted partially
 accessDenied.title=Access denied
