--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -608,8 +608,8 @@ admin.successCommentDelete = Comment deleted successful
 admin.promptDeleteUserComment = Are you sure that you want to delete this comment?
 wallets.downloadOrders=Download orders
 wallets.downloadOrdersByCurrencyPairs=Download orders by currency pairs
-merchants.InputRequestsLimit=Your daily input limit  for this merchant has been exceeded. Please try again tomorrow.
-
+merchants.InputRequestsLimit=Your daily input limit  for this currency has been exceeded. Please try again tomorrow.
+merchants.OutputRequestsLimit=Your daily output limit for this currency has been exceeded. Please try again tomorrow.
 merchants.invoice.accept=Accept
 merchants.invoice.decline=Decline
 merchants.invoice.accepted=Accepted
