fix - allow spending only UTXO with  >= 3 conf

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1157,7 +1157,6 @@ btcWallet.amount=Amount, BTC
 btcWallet.fee=Recommended fee, BTC/kB
 btcWallet.history.confirmations=Confirmations
 btcWallet.history.time=Time
-btcWallet.balance=Balance:
 btcWallet.unconfirmedBalance=Unconfirmed balance:
 btcWallet.password.title=Enter password
 btcWallet.password.prompt=Please enter wallet password:
@@ -1218,3 +1217,5 @@ order.minrate=يجب أن يكون سعر الصرف أكبر من {0}
 order.maxrate=يجب أن يكون سعر الصرف أقل من {0}
 order.zerorate=يجب أن يكون سعر الصرف أكبر من 0
 
+btcWallet.balance=Spendable balance:
+btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
