--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -945,7 +945,6 @@ btcWallet.amount=Amount, BTC
 btcWallet.fee=Recommended fee, BTC/kB
 btcWallet.history.confirmations=Confirmations
 btcWallet.history.time=Time
-btcWallet.balance=Balance:
 btcWallet.unconfirmedBalance=Unconfirmed balance:
 btcWallet.password.title=Enter password
 btcWallet.password.prompt=Please enter wallet password:
@@ -1005,3 +1004,6 @@ btcWallet.changeFee=Update
 order.minrate=汇率必须大于{0}
 order.maxrate=汇率必须小于{0}
 order.zerorate=汇率必须大于0
+
+btcWallet.balance=Spendable balance:
+btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
