--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -958,7 +958,6 @@ btcWallet.amount=Сумма, BTC
 btcWallet.fee=Рекомендуемая комиссия, BTC/kB
 btcWallet.history.confirmations=Подтверждения
 btcWallet.history.time=Время
-btcWallet.balance=Баланс:
 btcWallet.unconfirmedBalance=Неподтверждённый баланс:
 btcWallet.password.title=Ввод пароля
 btcWallet.password.prompt=Пожалуйста, введите пароль кошелька:
@@ -1018,3 +1017,6 @@ admin.currencyLimits.menu.currencyPairs=Цены ордеров
 
 btcWallet.actualFee=Актуальная комиссия, BTC/kB
 btcWallet.changeFee=Изменить
+
+btcWallet.balance=Доступный к использованию баланс:
+btcWallet.confirmedNonSpendableBalance=Баланс на подтверждении: 
