--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -867,7 +867,6 @@ btcWallet.amount=Amount, BTC
 btcWallet.fee=Recommended fee, BTC/kB
 btcWallet.history.confirmations=Confirmations
 btcWallet.history.time=Time
-btcWallet.balance=Balance:
 btcWallet.unconfirmedBalance=Unconfirmed balance:
 btcWallet.password.title=Enter password
 btcWallet.password.prompt=Please enter wallet password:
@@ -926,3 +925,6 @@ btcWallet.changeFee=Update
 order.minrate=The exchange rate must be greater than {0}
 order.maxrate=The exchange rate must be less than {0}
 order.zerorate=The exchange rate must be greater than 0
+
+btcWallet.balance=Spendable balance:
+btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
