--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -973,7 +973,6 @@ btcWallet.amount=Amount, BTC
 btcWallet.fee=Recommended fee, BTC/kB
 btcWallet.history.confirmations=Confirmations
 btcWallet.history.time=Time
-btcWallet.balance=Balance:
 btcWallet.unconfirmedBalance=Unconfirmed balance:
 btcWallet.password.title=Enter password
 btcWallet.password.prompt=Please enter wallet password:
@@ -1033,3 +1032,6 @@ btcWallet.changeFee=Update
 order.minrate=Nilai tukar harus lebih besar dari {0}
 order.maxrate=Nilai tukar harus kurang besar dari {0}
 order.zerorate=Nilai tukar harus lebih besar dari 0
+
+btcWallet.balance=Spendable balance:
+btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
