--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1218,3 +1218,4 @@ order.minrate=يجب أن يكون سعر الصرف أكبر من {0}
 order.maxrate=يجب أن يكون سعر الصرف أقل من {0}
 order.zerorate=يجب أن يكون سعر الصرف أكبر من 0
 
+refill.createError = Error while the refill request creation
