--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1005,3 +1005,4 @@ btcWallet.changeFee=Update
 order.minrate=汇率必须大于{0}
 order.maxrate=汇率必须小于{0}
 order.zerorate=汇率必须大于0
+refill.createError = Error while the refill request creation
