--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -926,4 +926,15 @@ btcWallet.changeFee=Update
 order.minrate=The exchange rate must be greater than {0}
 order.maxrate=The exchange rate must be less than {0}
 order.zerorate=The exchange rate must be greater than 0
-refill.createError = Error while the request creation
+refill.createError = Error while the refill request creation
+merchants.refillNotification.header=Exrates Refill notification
+merchants.refillNotification.WAITING_CONFIRMATION_USER=Your refill request #{0} through system {1} has been created and wait for your confirmation
+merchants.refillNotification.ON_PENDING=Your refill request #{0} through system {1} has been created and wait for payment
+merchants.refillNotification.CONFIRMED_USER=Your refill request #{0} has been confirmed and will be reviewed by the administrator
+merchants.refillNotification.IN_WORK_OF_ADMIN=Your refill request #{0} is being reviewing by the administrator
+merchants.refillNotification.REVOKED_USER=Your refill request #{0} has been revoked
+merchants.refillNotification.CREATED_BY_FACT=Payment was detected and request #{0} has been created
+merchants.refillNotification.ON_BCH_EXAM=Your refill request #{0} is waiting for blockchain confirmations
+merchants.refillNotification.ACCEPTED_ADMIN=Your refill request #{0}  has been accepted
+merchants.refillNotification.ACCEPTED_AUTO=Your refill request #{0}  has been accepted
+merchants.refillNotification.EXPIRED=Your refill request #{0}  has been expired
