--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1016,3 +1016,4 @@ admin.currencyLimits.maxRate=Максимальная цена
 admin.currencyLimits.menu.currencies=Ввод/вывод валют
 admin.currencyLimits.menu.currencyPairs=Цены ордеров
 
+refill.createError = Ошибка при создании запроса на вывод средств
