--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1033,3 +1033,5 @@ btcWallet.changeFee=Update
 order.minrate=Nilai tukar harus lebih besar dari {0}
 order.maxrate=Nilai tukar harus kurang besar dari {0}
 order.zerorate=Nilai tukar harus lebih besar dari 0
+
+refill.createError = Error while the refill request creation
