refactoring refill - add random amount

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -938,3 +938,4 @@ merchants.refillNotification.ON_BCH_EXAM=Your refill request #{0} is waiting for
 merchants.refillNotification.ACCEPTED_ADMIN=Your refill request #{0}  has been accepted
 merchants.refillNotification.ACCEPTED_AUTO=Your refill request #{0}  has been accepted
 merchants.refillNotification.EXPIRED=Your refill request #{0}  has been expired
+merchants.addition=Added to certify payment
