refactoring refill - refactoring expire proc

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -939,3 +939,4 @@ merchants.refillNotification.ACCEPTED_ADMIN=Your refill request #{0}  has been a
 merchants.refillNotification.ACCEPTED_AUTO=Your refill request #{0}  has been accepted
 merchants.refillNotification.EXPIRED=Your refill request #{0}  has been expired
 merchants.addition=Added to certify payment
+merchants.refill.refill=Please pay {0} on the wallet {1} and confirm the request within next {2} hours
