refactoring refill - fix

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -929,7 +929,9 @@ order.zerorate=The exchange rate must be greater than 0
 refill.createError = Error while the refill request creation
 merchants.refillNotification.header=Exrates Refill notification
 merchants.refillNotification.WAITING_CONFIRMATION_USER=Your refill request #{0} through system {1} has been created and wait for your confirmation
+merchants.refillNotification.WAITING_CONFIRMATION_USER.lifetime=Your refill request #{0} through system {1} has been created and wait for your confirmation. Please confirm the payment within next {2} hours
 merchants.refillNotification.ON_PENDING=Your refill request #{0} through system {1} has been created and wait for payment
+merchants.refillNotification.ON_PENDING.lifetime=Your refill request #{0} through system {1} has been created and wait for payment. Please make the payment within next {2} hours
 merchants.refillNotification.CONFIRMED_USER=Your refill request #{0} has been confirmed and will be reviewed by the administrator
 merchants.refillNotification.IN_WORK_OF_ADMIN=Your refill request #{0} is being reviewing by the administrator
 merchants.refillNotification.REVOKED_USER=Your refill request #{0} has been revoked
@@ -939,4 +941,5 @@ merchants.refillNotification.ACCEPTED_ADMIN=Your refill request #{0}  has been a
 merchants.refillNotification.ACCEPTED_AUTO=Your refill request #{0}  has been accepted
 merchants.refillNotification.EXPIRED=Your refill request #{0}  has been expired
 merchants.addition=Added to certify payment
-merchants.refill.refill=Please pay {0} on the wallet {1} and confirm the request within next {2} hours
+merchants.refill.invoice=Please pay {0} on the wallet {1}
+merchants.refill.btc=Please pay {0} on the address {1}
