ref structure for user

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1218,4 +1218,4 @@ order.minrate=يجب أن يكون سعر الصرف أكبر من {0}
 order.maxrate=يجب أن يكون سعر الصرف أقل من {0}
 order.zerorate=يجب أن يكون سعر الصرف أكبر من 0
 admin.referralAccruals=Referral accruals
-admin.admin.ref.showRefsNull=Show 0 amount
+refferal.structure=Referral structure
