--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1006,3 +1006,4 @@ order.minrate=汇率必须大于{0}
 order.maxrate=汇率必须小于{0}
 order.zerorate=汇率必须大于0
 admin.referralAccruals=Referral accruals
+refferal.structure=Referral structure
