--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -929,3 +929,4 @@ order.maxrate=The exchange rate must be less than {0}
 order.zerorate=The exchange rate must be greater than 0
 admin.referralAccruals=Referral accruals
 admin.admin.ref.showRefsNull=Show 0 amount
+refferal.structure=Referral structure
