--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1035,4 +1035,4 @@ order.minrate=Nilai tukar harus lebih besar dari {0}
 order.maxrate=Nilai tukar harus kurang besar dari {0}
 order.zerorate=Nilai tukar harus lebih besar dari 0
 admin.referralAccruals=Referral accruals
-admin.admin.ref.showRefsNull=Show 0 amount
+refferal.structure=Referral structure
