--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -719,4 +719,4 @@ session.time.from{0}To{1}Minutes=From {0} to {1} minutes
 session.settings.success=Session update success
 admin.referrals=Referrals
 admin.referralAccruals=Referral accruals
-admin.admin.ref.showRefsNull=Show 0 amount
+refferal.structure=Referral structure
