--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1021,4 +1021,4 @@ admin.referrals=Рефералы
 btcWallet.actualFee=Актуальная комиссия, BTC/kB
 btcWallet.changeFee=Изменить
 admin.referralAccruals=Реферальные начисления
-admin.admin.ref.showRefsNull=Show 0 amount
+refferal.structure=Реферальная структура
