--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -940,6 +940,18 @@ merchants.refillNotification.ON_BCH_EXAM=Your refill request #{0} is waiting for
 merchants.refillNotification.ACCEPTED_ADMIN=Your refill request #{0}  has been accepted
 merchants.refillNotification.ACCEPTED_AUTO=Your refill request #{0}  has been accepted
 merchants.refillNotification.EXPIRED=Your refill request #{0}  has been expired
+merchants.refillNotification.DECLINED_ADMIN=Your refill request #{0}  has been declined
 merchants.addition=Added to certify payment
 merchants.refill.invoice=Please pay {0} on the wallet {1}
 merchants.refill.btc=Please pay {0} on the address {1}
+merchants.refill.ON_PENDING=Waiting payment
+merchants.refill.WAITING_CONFIRMATION_USER=Wait
+merchants.refill.CONFIRMED_USER=Confirmed
+merchants.refill.IN_WORK_OF_ADMIN=On confirmation
+merchants.refill.REVOKED_USER=Revoked
+merchants.refill.CREATED_BY_FACT=Created
+merchants.refill.ON_BCH_EXAM=On confirmation
+merchants.refill.ACCEPTED_ADMIN=Accepted
+merchants.refill.ACCEPTED_AUTO=Accepted
+merchants.refill.DECLINED_ADMIN=Declined
+merchants.refill.EXPIRED=Expired
