--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -955,3 +955,29 @@ merchants.refill.ACCEPTED_ADMIN=Accepted
 merchants.refill.ACCEPTED_AUTO=Accepted
 merchants.refill.DECLINED_ADMIN=Declined
 merchants.refill.EXPIRED=Expired
+admin.refillRequests=Refill requests
+admin.refill.new=New
+admin.refill.accepted=Accepted
+admin.refill.declined=Declined
+admin.refill.auto=Auto processing
+admin.refill.All=All
+refill.merchant=Merchant
+merchants.refillDetails.recipientAccount=Recipient's account number
+merchants.refillDetails.recipientBank=Recipient's bank
+merchants.refillDetails.recipientFullName=Recipient's full name
+refill.infoModal.title=Refill request summary
+refill.requestDatetime=Date of creation
+refill.user=User
+refill.amount=Amount
+refill.currency=Currency
+refill.commission=Commission
+refill.wallet=User wallet
+refill.acceptanceDatetime=Acceptance date
+refill.acceptanceUser=Acceptance user
+refill.status=Status
+merchants.refillRequestAccepted=Accepted
+merchants.refillRequestAccept=Accept
+merchants.refillRequestDecline=Decline
+merchants.promptRefillRequestAccept=Are you sure you want to accept the request?
+merchants.promptRefillRequestDecline=Are you sure you want to decline the request?
+refill.statusModificationDate=Date of setting status
