refactoring refill - confirm by user

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -981,3 +981,4 @@ merchants.refillRequestDecline=Decline
 merchants.promptRefillRequestAccept=Are you sure you want to accept the request?
 merchants.promptRefillRequestDecline=Are you sure you want to decline the request?
 refill.statusModificationDate=Date of setting status
+refill.receiptScan.absent= Scan the receipt is not attached
