--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -968,7 +968,8 @@ admin.refillRequests=Refill requests
 admin.refill.new=New
 admin.refill.accepted=Accepted
 admin.refill.declined=Declined
-admin.refill.auto=Auto processing
+admin.refill.waitPayment=Wait for payment
+admin.refill.confirmationCollecting=Blockchain confirmation
 admin.refill.All=All
 refill.merchant=Merchant
 merchants.refillDetails.recipientAccount=Recipient's account number
@@ -977,6 +978,7 @@ merchants.refillDetails.recipientFullName=Recipient's full name
 refill.infoModal.title=Refill request summary
 refill.requestDatetime=Date of creation
 refill.user=User
+refill.paymentAmount=Amount of payment
 refill.amount=Amount
 refill.currency=Currency
 refill.commission=Commission
