refill_request - add adminka refill_request visualisation + info

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -993,3 +993,6 @@ merchants.promptRefillRequestAccept=Are you sure you want to accept the request?
 merchants.promptRefillRequestDecline=Are you sure you want to decline the request?
 refill.statusModificationDate=Date of setting status
 refill.receiptScan.absent= Scan the receipt is not attached
+refill.payerData= Details of the sender of payment
+refill.hash=Hash
+refill.merchantTransactionId=Merchant transaction
