add accept order by admin

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1009,3 +1009,5 @@ order.zerorate=汇率必须大于0
 
 btcWallet.balance=Spendable balance:
 btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
+admin.order.acceptsuccess=Order {0} accepted successfully
+manageOrder.title=Manage orders
