--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1036,3 +1036,5 @@ order.zerorate=Nilai tukar harus lebih besar dari 0
 
 btcWallet.balance=Spendable balance:
 btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
+admin.order.acceptsuccess=Order {0} accepted successfully
+manageOrder.title=Manage orders
