--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1022,3 +1022,5 @@ btcWallet.changeFee=Изменить
 
 btcWallet.balance=Доступный к использованию баланс:
 btcWallet.confirmedNonSpendableBalance=Баланс на подтверждении: 
+admin.order.acceptsuccess=Ордер {0} успешно принят
+manageOrder.title=Управление ордерами
