--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -930,3 +930,5 @@ order.zerorate=The exchange rate must be greater than 0
 
 btcWallet.balance=Spendable balance:
 btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
+admin.order.acceptsuccess=Order {0} accepted successfully
+manageOrder.title=Manage orders
