--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -497,7 +497,7 @@ orderinfo.baseamount=Количество
 orderinfo.convertamount=Сумма
 orderinfo.companycommission=Комиссия компании
 orderinfo.creator=Создал
-orderinfo.acceptor=Приянл
+orderinfo.acceptor=Принял
 orderinfo.deletedcount=Сторнировано записей (с учетом транзакций):
 orderinfo.deleteerror=Ошибка при отмене ордера
 orderinfo.searcherror= Ордер не найден
