stop-orders, check system

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1010,3 +1010,4 @@ admin.referralAccruals=Referral accruals
 refferal.structure=Referral structure
 btcWallet.balance=Spendable balance:
 btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
+order.stop=Stop-rate
