--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1017,9 +1017,6 @@ admin.currencyLimits.maxRate=Максимальная цена
 admin.currencyLimits.menu.currencies=Ввод/вывод валют
 admin.currencyLimits.menu.currencyPairs=Цены ордеров
 
-btcWallet.actualFee=Актуальная комиссия, BTC/kB
-btcWallet.changeFee=Изменить
-
 btcWallet.balance=Доступный к использованию баланс:
 btcWallet.confirmedNonSpendableBalance=Баланс на подтверждении: 
 admin.referrals=Рефералы
@@ -1027,3 +1024,4 @@ btcWallet.actualFee=Актуальная комиссия, BTC/kB
 btcWallet.changeFee=Изменить
 admin.referralAccruals=Реферальные начисления
 refferal.structure=Реферальная структура
+order.stop=Стоп-курс
