--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -720,3 +720,4 @@ session.settings.success=Session update success
 admin.referrals=Referrals
 admin.referralAccruals=Referral accruals
 refferal.structure=Referral structure
+order.stop=Stop-rate
