--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1038,3 +1038,4 @@ admin.referralAccruals=Referral accruals
 refferal.structure=Referral structure
 btcWallet.balance=Spendable balance:
 btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
+order.stop=Stop-rate
