--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -883,6 +883,7 @@ action.button.DECLINE_BUTTON=decline
 action.button.DECLINE_HOLDED_BUTTON=decline
 action.button.POST_BUTTON=post
 action.button.POST_HOLDED_BUTTON=post
+action.button.ACCEPT_HOLDED_BUTTON=accept
 action.button.TAKE_TO_WORK_BUTTON=take
 action.button.RETURN_FROM_WORK_BUTTON=return
 
@@ -943,6 +944,8 @@ merchants.refillNotification.ON_PENDING=Your refill request #{0} through system 
 merchants.refillNotification.ON_PENDING.lifetime=Your refill request #{0} through system {1} has been created and wait for payment. Please make the payment within next {2} hours
 merchants.refillNotification.CONFIRMED_USER=Your refill request #{0} has been confirmed and will be reviewed by the administrator
 merchants.refillNotification.IN_WORK_OF_ADMIN=Your refill request #{0} is being reviewing by the administrator
+merchants.refillNotification.TAKEN_FROM_PENDING=Your refill request #{0} is being reviewing by the administrator
+merchants.refillNotification.TAKEN_FROM_EXAM=Your refill request #{0} is being reviewing by the administrator
 merchants.refillNotification.REVOKED_USER=Your refill request #{0} has been revoked
 merchants.refillNotification.CREATED_BY_FACT=Payment was detected and request #{0} has been created
 merchants.refillNotification.ON_BCH_EXAM=Your refill request #{0} is waiting for blockchain confirmations
@@ -957,6 +960,8 @@ merchants.refill.ON_PENDING=Waiting payment
 merchants.refill.WAITING_CONFIRMATION_USER=Wait
 merchants.refill.CONFIRMED_USER=Confirmed
 merchants.refill.IN_WORK_OF_ADMIN=On confirmation
+merchants.refill.TAKEN_FROM_PENDING=On confirmation
+merchants.refill.TAKEN_FROM_EXAM=On confirmation
 merchants.refill.REVOKED_USER=Revoked
 merchants.refill.CREATED_BY_FACT=Created
 merchants.refill.ON_BCH_EXAM=On confirmation
@@ -996,3 +1001,6 @@ refill.receiptScan.absent= Scan the receipt is not attached
 refill.payerData= Details of the sender of payment
 refill.hash=Hash
 refill.merchantTransactionId=Merchant transaction
+merchants.refill.edr=Please pay {0} on the address {1}
+refill.accepted.title=Refill is accepted
+refill.declined.title=Withdrawal is declined
