--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1025,3 +1025,5 @@ btcWallet.changeFee=Изменить
 admin.referralAccruals=Реферальные начисления
 refferal.structure=Реферальная структура
 order.stop=Стоп-курс
+myorders.stoporders=Stop orders
+myorders.stopRate=Stop-rate
