--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -721,3 +721,5 @@ admin.referrals=Referrals
 admin.referralAccruals=Referral accruals
 refferal.structure=Referral structure
 order.stop=Stop-rate
+myorders.stoporders=Stop orders
+myorders.stopRate=Stop-rate
