--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1222,3 +1222,5 @@ refferal.structure=Referral structure
 btcWallet.balance=Spendable balance:
 btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
 order.stop=Stop-rate
+myorders.stoporders=Stop orders
+myorders.stopRate=Stop-rate
