--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1039,3 +1039,5 @@ refferal.structure=Referral structure
 btcWallet.balance=Spendable balance:
 btcWallet.confirmedNonSpendableBalance=Balance on confirmation: 
 order.stop=Stop-rate
+myorders.stoporders=Stop orders
+myorders.stopRate=Stop-rate
