--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1025,3 +1025,5 @@ admin.referralAccruals=Реферальные начисления
 refferal.structure=Реферальная структура
 admin.order.acceptsuccess=Ордер {0} успешно принят
 manageOrder.title=Управление ордерами
+orderinfo.orderSource=Исходный ордер
+orderinfo.orderChildren=Производные ордера
