--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -165,7 +165,7 @@ merchants.limitExceed=limit was exceeded. Please try again.
 merchants.meansOfPayment=Payment method
 merchants.merchants=merchants
 merchants.modalInputCommission=Stock exchange commission: __amount __currency __percent
-merchants.modalInputFinalSum=Total amount to be paid : __amount __currency
+merchants.modalInputFinalSum=Total amount will be enrolled : __amount __currency
 merchants.modalInputHeader=You use a payment system __merchant for inputting __amount __currency
 merchants.modalOutputCommission=Exchange Fee will be : __amount __currency __percent
 merchants.modalOutputFinalSum=Amount to be enrolled : __amount __currency
@@ -1004,3 +1004,6 @@ refill.merchantTransactionId=Merchant transaction
 merchants.refill.edr=Please pay {0} on the address {1}
 refill.accepted.title=Refill is accepted
 refill.declined.title=Withdrawal is declined
+merchants.modalOutputCommissionMerchant=Merchant Fee will be : __amount __currency __percent
+merchants.modalInputCommissionMerchant=Merchant Fee will be : __amount __currency __percent
+merchant.commission.warning= WARNING! The merchant's fee is indicative and can be changed by the merchant!
