--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -983,13 +983,14 @@ merchants.refillDetails.recipientFullName=Recipient's full name
 refill.infoModal.title=Refill request summary
 refill.requestDatetime=Date of creation
 refill.user=User
-refill.paymentAmount=Amount of payment
+refill.enrolledAmount=Enrolled amount
 refill.amount=Amount
 refill.currency=Currency
 refill.commission=Commission
 refill.wallet=User wallet
 refill.acceptanceDatetime=Acceptance date
 refill.acceptanceUser=Acceptance user
+refill.receivedAmount=Received amount
 refill.status=Status
 merchants.refillRequestAccepted=Accepted
 merchants.refillRequestAccept=Accept
