--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -964,7 +964,7 @@ merchants.refill.TAKEN_FROM_PENDING=On confirmation
 merchants.refill.TAKEN_FROM_EXAM=On confirmation
 merchants.refill.REVOKED_USER=Revoked
 merchants.refill.CREATED_BY_FACT=Created
-merchants.refill.ON_BCH_EXAM=On confirmation
+merchants.refill.ON_BCH_EXAM=Confirmations passed {0}
 merchants.refill.ACCEPTED_ADMIN=Accepted
 merchants.refill.ACCEPTED_AUTO=Accepted
 merchants.refill.DECLINED_ADMIN=Declined
@@ -1008,3 +1008,4 @@ refill.declined.title=Withdrawal is declined
 merchants.modalOutputCommissionMerchant=Merchant Fee will be : __amount __currency __percent
 merchants.modalInputCommissionMerchant=Merchant Fee will be : __amount __currency __percent
 merchant.commission.warning= WARNING! The merchant's fee is indicative and can be changed by the merchant!
+refill.confirmations=Confirmations
