change in withdraw request allocation in adminka

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1077,6 +1077,8 @@ transactionsourcetype.INVOICE=INVOICE
 news.clearform.prompt=Clear content?
 merchants.invoice.error.fieldsNotField=Mandatory fields not filled!
 admin.withdraw.new=New
+admin.withdraw.manual=Manual withdrawal
+admin.withdraw.confirm=On confirmation
 admin.withdraw.accepted=Accepted
 admin.withdraw.declined=Declined
 admin.invoice.updateAmount=Update actual sum of payment
