--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -868,6 +868,8 @@ transactionsourcetype.INVOICE=INVOICE
 news.clearform.prompt=Clear content?
 merchants.invoice.error.fieldsNotField=Mandatory fields not filled!
 admin.withdraw.new=New
+admin.withdraw.manual=Manual withdrawal
+admin.withdraw.confirm=On confirmation
 admin.withdraw.accepted=Accepted
 admin.withdraw.declined=Declined
 merchants.invoice.ACCEPTED_AUTO=Accepted
