--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -895,6 +895,8 @@ transactionsourcetype.INVOICE=INVOICE
 news.clearform.prompt=Clear content?
 merchants.invoice.error.fieldsNotField=Bidang wajib tidak diisi!
 admin.withdraw.new=Baru
+admin.withdraw.manual=Output pengguna
+admin.withdraw.confirm=Konfirmasi
 admin.withdraw.accepted=Diterima
 admin.withdraw.declined=Ditolak
 admin.invoice.updateAmount=Memperbarui jumlah aktual pembayaran
