--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -979,6 +979,8 @@ transactionsourcetype.INVOICE=ИНВОЙС
 news.clearform.prompt=Очистить содержимое?
 merchants.invoice.error.fieldsNotField=Обязательные поля не заполнены!
 admin.withdraw.new=Новые
+admin.withdraw.manual=Ручной вывод
+admin.withdraw.confirm=На подтверждении
 admin.withdraw.accepted=Принятые
 admin.withdraw.declined=Отклонённые
 admin.invoice.updateAmount=Изменить фактическую сумму платежа
