--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1118,6 +1118,7 @@ transfer.warning=ATTENTION<br/>This is transfer of costs to OTHER user WITHIN st
   is not responsible and cannot revert the transfer.
 input.warning.BTC=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
 input.warning.EDR=The address is valid for a SINGLE input.<br/>For each refill, create new input request.
+input.warning.ETH=You can not make a deposit via contracts or send withdrawals to contracts!.
 transactionsourcetype.WITHDRAW=WITHDRAW
 merchant.withdrawAutoParams=Automatic withdrawal parameters
 merchant.withdrawAuto=Auto-withdrawal
