--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1020,6 +1020,7 @@ transfer.warning=ВНИМАНИЕ!<br/>Это функция перевода с
 Мы не несем ответственность и не отменяем перевод!
 input.warning.BTC=Адрес будет действителен для ОДНОГО пополнения.<br/>Для каждого пополнения создавайте новую заявку!
 input.warning.EDR=Адрес будет действителен для ОДНОГО пополнения.<br/>Для каждого пополнения создавайте новую заявку!
+input.warning.ETH=Вы не можете пополнить баланс аккаунтом-контрактом или вывести средства на аккаунт контракт!.
 message.sender=Отправитель
 message.recipient=Получатель
 
